--- a/VisualStudioCode_test.html
+++ b/VisualStudioCode_test.html
@@ -152,7 +152,7 @@ function doStuff(){ //function called when button is pressed.
 
 </head>
 <body>
-<!--navigation bar-->
+<!--navigation bar wont work--
 <header>
     <nav>
          <li>
@@ -163,7 +163,17 @@ function doStuff(){ //function called when button is pressed.
         </li>   
     </nav>
 </header>
-  
+-->
+<header>
+    <table>
+        <tr>
+            <td><a href=#>Home</a></td>
+            <td><a href=#>About</a></td>
+            <td><a href=#>Gallery</a>></td>
+            <td><a href=#>Contact Us</a></td>
+        </tr>
+    </table>
+</header>
 
 <div id="outline">
 <div id="bgstyle">
