--- a/VisualStudioCode_test.html
+++ b/VisualStudioCode_test.html
@@ -66,8 +66,6 @@ else if (clickcount<2){
 
     document.getElementById("loading").innerHTML="Loading...("+j+")";
 
-        document.getElementById("display").innerHTML="red= "+red+"green= "+green+"blue= "+blue;
-
     //if (j>30){ //fix this -- changed because loading bar flickers up until around count 30. WHY??
    // document.getElementById("loading").innerHTML="Loading...("+j+")";
     //display loading and numbers
@@ -164,6 +162,7 @@ function doStuff(){ //function called when button is pressed.
     </nav>
 </header>
 -->
+<center>
 <header>
     <table>
         <tr>
@@ -174,6 +173,7 @@ function doStuff(){ //function called when button is pressed.
         </tr>
     </table>
 </header>
+</center>
 
 <div id="outline">
 <div id="bgstyle">
