--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
         <h1>About</h1>
         Hi Welcome to the ABOUT page. Find out about nothing.
         <br><br>
-        Go <a href="./Index.html">back </a>to the previous page.</center>
+        Go <a href="VisualStudioCode_test.html">back </a>to the previous page.</center>
 </body>
 
 </html>
