--- a/about.html
+++ b/about.html
@@ -129,7 +129,7 @@ else if (clickcount=3){
                 <header>
                     <table>
                         <tr>
-                            <td><a href=#>Home</a></td>
+                            <td><a href="index.html">Home</a></td>
                             <td><a href="about.html">About</a></td>
                             <td><a href="gallery.html">Gallery</a>></td>
                             <td><a href="contactus.html">Contact Us</a></td>
@@ -147,6 +147,8 @@ else if (clickcount=3){
 </div>
 <center><h1>About us</h1>  
 <br>
+We are one person making cool html stuffs and things.<br>
+Please have a look around and judge my code. 
 <div id="display" style="color:blue;"></div>
 <div id="loading" style="color:rgb(150, 150, 224);"></div>
 </center>
