--- a/gallery.html
+++ b/gallery.html
@@ -147,7 +147,18 @@ else if (clickcount=3){
 </div>
 <center><h1>Gallery</h1>  
 <br>
-Here we have some exciting images of something I haven't decided yet.
+Here we have some exciting images of colorful goats. How nice.
+<br>
+<br>
+<table cellpadding = "40">
+    <tr>
+        <td><div id ="img"><img src ="goat1.jpg"></div></td>
+        <td><div id ="img"><img src = "goat2.jpg"></div></td>
+        <td><div id ="img"><img src = "goat3.jpg"></div></td>
+        <td><div id ="img"><img src = "goat4.jpg"></div></td>
+        <td><div id ="img"><img src = "goat5.jpg"></div></td>
+    </tr>
+</table>
 <div id="display" style="color:blue;"></div>
 <div id="loading" style="color:rgb(150, 150, 224);"></div>
 </center>
