--- a/about.html
+++ b/about.html
@@ -141,12 +141,9 @@ else if (clickcount=3){
 <div id="outline">
 <div id="bgstyle">
 
-<div id = colorformat>
-<!--button image:-->
-<img src="colour_img_1.gif"  onmouseover="this.src='colour_img_2.gif';" onmouseout="this.src='colour_img_1.gif';" onclick="changeColor()" style="width:50px;">
-</div>
-<center><h1>About us</h1>  
-<br>
+<center><h1>About</h1>  
+    <img src="colour_img_1.gif"  onmouseover="this.src='colour_img_2.gif';" onmouseout="this.src='colour_img_1.gif';" onclick="changeColor()" style="width:30px;">
+<br><br>
 We are one person making cool html stuffs and things.<br>
 Please have a look around and judge my code. 
 <div id="display" style="color:blue;"></div>
