--- a/gallery.html
+++ b/gallery.html
@@ -141,13 +141,10 @@ else if (clickcount=3){
 <div id="outline">
 <div id="bgstyle">
 
-<div id = colorformat>
-<!--button image:-->
-<img src="colour_img_1.gif"  onmouseover="this.src='colour_img_2.gif';" onmouseout="this.src='colour_img_1.gif';" onclick="changeColor()" style="width:50px;">
-</div>
 <center><h1>Gallery</h1>  
-<br>
-Here we have some exciting images of colorful goats. How nice.
+ <img src="colour_img_1.gif"  onmouseover="this.src='colour_img_2.gif';" onmouseout="this.src='colour_img_1.gif';" onclick="changeColor()" style="width:30px;">
+<br><br>
+Here we have some exciting images of colorful goats.
 <br>
 <br>
 <table cellpadding = "40">
