--- a/gallery.html
+++ b/gallery.html
@@ -147,15 +147,26 @@ else if (clickcount=3){
 Here we have some exciting images of colorful goats.
 <br>
 <br>
-<table cellpadding = "40">
-    <tr>
-        <td><div id ="img"><img src ="goat1.jpg"></div></td>
-        <td><div id ="img"><img src = "goat2.jpg"></div></td>
-        <td><div id ="img"><img src = "goat3.jpg"></div></td>
-        <td><div id ="img"><img src = "goat4.jpg"></div></td>
-        <td><div id ="img"><img src = "goat5.jpg"></div></td>
-    </tr>
-</table>
+<div class="row">
+        <div class="column">
+          <div id="img"><img src="goat1.jpg" style="width:70%"></div>
+        </div>
+        <div class="column">
+                <div id="img"><img src="goat2.jpg" style="width:70%"></div>
+        </div>
+        <div class="column">
+                <div id="img"><img src="goat3.jpg" style="width:70%"></div>
+        </div>
+        <div class="column">
+                <div id="img"><img src="goat4.jpg" style="width:70%"></div>
+        </div>
+        <div class="column">
+                <div id="img"><img src="goat5.jpg" style="width:70%"></div>
+        </div>
+        <div class="column">
+                <div id="img"><img src="goat6.jpg" style="width:70%"></div>
+        </div>
+      </div>
 <div id="display" style="color:blue;"></div>
 <div id="loading" style="color:rgb(150, 150, 224);"></div>
 </center>
