media screen css edit bgcolor & nav transitions

--- a/index.html
+++ b/index.html
@@ -154,13 +154,13 @@ function doStuff(){ //function called when button is pressed.
             <ul><a href=#>Contact Us</a></ul>
         </li>   
     </nav>
-</header>
--->
+</header>-->
+
 <center>
 <header>
     <table>
         <tr>
-            <td><a href=#>Home</a></td>
+            <td><a href= "index.html">Home</a></td>
             <td><a href="about.html">About</a></td>
             <td><a href="gallery.html">Gallery</a>></td>
             <td><a href="contactus.html">Contact Us</a></td>
