Contact page textarea fixed

--- a/about.html
+++ b/about.html
@@ -145,7 +145,7 @@ else if (clickcount=3){
     <img src="colour_img_1.gif"  onmouseover="this.src='colour_img_2.gif';" onmouseout="this.src='colour_img_1.gif';" onclick="changeColor()" style="width:30px;">
 <br><br>
 We are one person making cool html stuffs and things.<br>
-Please have a look around and judge my code. 
+Please judge my code. 
 <div id="display" style="color:blue;"></div>
 <div id="loading" style="color:rgb(150, 150, 224);"></div>
 </center>
