--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ function doStuff(){ //function called when button is pressed.
             <td><a href= "index.html">Home</a></td>
             <td><a href="about.html">About</a></td>
             <td><a href="gallery.html">Gallery</a>></td>
-            <td><a href="contactus.html">Contact Us</a></td>
+            <td><a href="feedback.html">Comments</a></td>
         </tr>
     </table>
 </header>
