--- a/gallery.html
+++ b/gallery.html
@@ -132,7 +132,7 @@ else if (clickcount=3){
                             <td><a href="index.html">Home</a></td>
                             <td><a href="about.html">About</a></td>
                             <td><a href="gallery.html">Gallery</a>></td>
-                            <td><a href="contactus.html">Contact Us</a></td>
+                            <td><a href="feedback.html">Comments</a></td>
                         </tr>
                     </table>
                 </header>
