made shop page html and did fizzbuzz list

--- a/feedback.html
+++ b/feedback.html
@@ -155,6 +155,7 @@ function sendInfo(){
                             <td><a href="about.html">About</a></td>
                             <td><a href="gallery.html">Gallery</a>></td>
                             <td><a href="feedback.html">Comments</a></td>
+                            <td><a href="shop.html">Shop</a>></td>
                         </tr>
                     </table>
                 </header>
