--- a/index.html
+++ b/index.html
@@ -16,9 +16,6 @@ var clickcount = 0;
 var blue;
 var red;
 var green;
-
-function changeColor(){
-
     var img = document.getElementById("imageButton");
 
 if (clickcount<1){
@@ -156,6 +153,7 @@ function doStuff(){ //function called when button is pressed.
             <td><a href="about.html">About</a></td>
             <td><a href="gallery.html">Gallery</a>></td>
             <td><a href="feedback.html">Comments</a></td>
+            <td><a href="shop.html">Shop</a>></td>
         </tr>
     </table>
 </header>
