--- a/gallery.html
+++ b/gallery.html
@@ -133,6 +133,7 @@ else if (clickcount=3){
                             <td><a href="about.html">About</a></td>
                             <td><a href="gallery.html">Gallery</a>></td>
                             <td><a href="feedback.html">Comments</a></td>
+                            <td><a href="shop.html">Shop</a>></td>
                         </tr>
                     </table>
                 </header>
